@@ -1,4 +1,4 @@
-# strdup.m4 serial 4
+# strdup.m4 serial 5
 dnl Copyright (C) 2002, 2003, 2004 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
@@ -10,6 +10,7 @@ AC_DEFUN([gl_FUNC_STRDUP],
 [
   AC_REPLACE_FUNCS(strdup)
   AC_CHECK_DECLS_ONCE(strdup)
+  AH_BOTTOM([#include <strdup.h>])
   gl_PREREQ_STRDUP
 ])
 
